sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:4: error: type mismatch;
 found   : Null(null)
 required: Boolean
Note that implicit conversions are not applicable because they are ambiguous:
 both method Boolean2booleanNullConflict in class LowPriorityImplicits of type (x: Null)Boolean
 and method Boolean2boolean in object Predef of type (x: Boolean)Boolean
 are possible conversion functions from Null(null) to Boolean
	var tri: Boolean = null;
                           ^